--- a/src/app/role-adm/tela-home-adm/tela-home-adm.component.html
+++ b/src/app/role-adm/tela-home-adm/tela-home-adm.component.html
@@ -29,18 +29,15 @@
     </button>
   </mat-menu>
 
-
-  <!-- Título -->
   <span class="tituloH">HEIMDALL</span>
 
-  <!-- Espaço flexível para empurrar o botão de logout para a direita -->
   <span class="spacer"></span>
 
-  <!-- Botão de logout -->
   <button mat-icon-button (click)="logout()">
     <mat-icon>logout</mat-icon>
   </button>
 
+  <img src="assets/images/ifsp.logo.png" class="logo" />
 </mat-toolbar>
 <div *ngFor="let block of data">
   <div class="header">
