--- a/src/app/role-teacher/tela-home-teacher/tela-home-teacher.component.html
+++ b/src/app/role-teacher/tela-home-teacher/tela-home-teacher.component.html
@@ -13,17 +13,15 @@
     </button>
   </mat-menu>
 
-  <!-- Título -->
   <span class="tituloH">HEIMDALL</span>
 
-  <!-- Espaço flexível para empurrar o botão de logout para a direita -->
   <span class="spacer"></span>
 
-  <!-- Botão de logout -->
   <button mat-icon-button (click)="logout()">
     <mat-icon>logout</mat-icon>
   </button>
 
+  <img src="assets/images/ifsp.logo.png" class="logo" />
 </mat-toolbar>
 <div>
   <div class="header">
@@ -31,16 +29,14 @@
   </div>
   <div class="container">
     <div class="cards">
-        <mat-card class="card-width">
-          <mat-card-header>
-            <mat-card-title class="title-card">Horários de Aula</mat-card-title>
-          </mat-card-header>
-          <mat-card-actions>
-            <button (click)="redirectHorarios()" mat-button>
-              Selecionar
-            </button>
-          </mat-card-actions>
-        </mat-card>
+      <mat-card class="card-width">
+        <mat-card-header>
+          <mat-card-title class="title-card">Horários de Aula</mat-card-title>
+        </mat-card-header>
+        <mat-card-actions>
+          <button (click)="redirectHorarios()" mat-button>Selecionar</button>
+        </mat-card-actions>
+      </mat-card>
     </div>
   </div>
 </div>
