--- a/src/app/role-adm/tela-home-adm/tela-home-adm.component.scss
+++ b/src/app/role-adm/tela-home-adm/tela-home-adm.component.scss
@@ -132,3 +132,13 @@ mat-card-title {
 .spacer {
   flex: 1 1 auto;
 }
+
+.toolbar-spacer {
+  flex: 1;
+}
+
+.logo {
+  position: relative;
+  width: 30px;
+  margin-right: 10px;
+}
