--- a/src/app/tela-materias/tela-novas-materias/tela-novas-materias.component.html
+++ b/src/app/tela-materias/tela-novas-materias/tela-novas-materias.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar>
   <!-- Botão para voltar para a página anterior -->
-  <button mat-icon-button (click)="goBack()">
+  <button mat-icon-button (click)="goHome()">
     <mat-icon>home</mat-icon>
   </button>
 
@@ -27,45 +27,57 @@
   </button>
 </mat-toolbar>
 
-  <mat-card>
-    <mat-card-title>{{classToEdit.valid ? 'Edição': 'Cadastro'}} de Matérias</mat-card-title>
-    <mat-card-content>
-      <form [formGroup]="resgiterForm" (ngSubmit)="save()">
-        <mat-form-field>
-            <mat-label>Nome:</mat-label>
-          <input formControlName="name" matInput type="text" placeholder="Nome da Matéria" >
-        </mat-form-field>
-        <mat-form-field>
-            <mat-label>Descrição:</mat-label>
-          <input formControlName="description" matInput type="text" placeholder="Descrição da Matéria">
-        </mat-form-field>
-        <br>
+<mat-card>
+  <mat-card-title
+    >{{ classToEdit.valid ? "Edição" : "Cadastro" }} de Matérias</mat-card-title
+  >
+  <mat-card-content>
+    <form [formGroup]="resgiterForm" (ngSubmit)="save()">
+      <mat-form-field>
+        <mat-label>Nome:</mat-label>
+        <input
+          formControlName="name"
+          matInput
+          type="text"
+          placeholder="Nome da Matéria"
+        />
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label>Descrição:</mat-label>
+        <input
+          formControlName="description"
+          matInput
+          type="text"
+          placeholder="Descrição da Matéria"
+        />
+      </mat-form-field>
+      <br />
 
-        <mat-form-field>
-          <mat-label>Professores:</mat-label>
-          <mat-select formControlName="teachers_id" multiple>
-            @for (teacher of teachersList; track teacher) {
-              <mat-option [value]="teacher._id">{{teacher.name}}</mat-option>
-            } @empty {
-              <mat-option [value]="">Sem dados</mat-option>
-            }
-          </mat-select>
-        </mat-form-field>
+      <mat-form-field>
+        <mat-label>Professores:</mat-label>
+        <mat-select formControlName="teachers_id" multiple>
+          @for (teacher of teachersList; track teacher) {
+          <mat-option [value]="teacher._id">{{ teacher.name }}</mat-option>
+          } @empty {
+          <mat-option [value]="">Sem dados</mat-option>
+          }
+        </mat-select>
+      </mat-form-field>
 
-        <mat-form-field>
-          <mat-label>Curso:</mat-label>
-          <mat-select formControlName="course_id">
-            @for (course of courses; track course) {
-              <mat-option [value]="course._id">{{course.name}}</mat-option>
-            } @empty {
-              <mat-option [value]="">Sem dados</mat-option>
-            }
-          </mat-select>
-        </mat-form-field>
+      <mat-form-field>
+        <mat-label>Curso:</mat-label>
+        <mat-select formControlName="course_id">
+          @for (course of courses; track course) {
+          <mat-option [value]="course._id">{{ course.name }}</mat-option>
+          } @empty {
+          <mat-option [value]="">Sem dados</mat-option>
+          }
+        </mat-select>
+      </mat-form-field>
 
-        <button type="submit" class="saveButton">{{classToEdit.valid ? 'Editar': 'Cadastrar'}}</button>
-      </form>
-    </mat-card-content>
-
-    
-  </mat-card>
+      <button type="submit" class="saveButton">
+        {{ classToEdit.valid ? "Editar" : "Cadastrar" }}
+      </button>
+    </form>
+  </mat-card-content>
+</mat-card>
