--- a/src/app/tela-inicial/tela-inicial.component.scss
+++ b/src/app/tela-inicial/tela-inicial.component.scss
@@ -1,6 +1,6 @@
 .mat-toolbar {
   background: rgb(20, 20, 20);
-  color: #1ddd04;
+  color: #369835;
   display: flex;
   align-items: center;
   padding: 10px;
@@ -51,7 +51,7 @@ li {
 }
 
 .tryNow button {
-  background-color: #1ddd04;
+  background-color: #369835;
   color: rgb(0, 0, 0);
   font-weight: 900 !important;
   font-family: sans-serif !important;
@@ -62,7 +62,7 @@ li {
 .tituloH {
   font-size: 2em;
   font-family: Copperplate, Copperplate Gothic Light, fantasy;
-  color: #1ddd04;
+  color: #369835;
   margin-left: 20px; /* Espaçamento à esquerda para o título */
 }
 
