--- a/src/app/animacao/animacao.component.html
+++ b/src/app/animacao/animacao.component.html
@@ -13,7 +13,7 @@
       *ngIf="showLogo"
     />
     <img
-      src="assets/images/ifsp.nome.png"
+      src="assets/images/ifsp.nome2.png"
       class="nome"
       [ngClass]="{ 'animate-nome': showNome }"
       *ngIf="showNome"
