--- a/src/app/tela-inicial/tela-inicial.component.scss
+++ b/src/app/tela-inicial/tela-inicial.component.scss
@@ -49,8 +49,8 @@ li {
 }
 
 .tryButton {
-  background-color: hsl(113, 100%, 50%) !important;
-  color: rgb(0, 0, 0) !important;
+  background-color: rgb(0, 0, 0) !important;
+  color: hsl(113, 100%, 50%) !important;
   font-family: Georgia, "Times New Roman", Times, serif !important;
   width: 100%;
   height: 1.5cm;
