--- a/src/app/role-adm/tela-home-adm/tela-home-adm.component.scss
+++ b/src/app/role-adm/tela-home-adm/tela-home-adm.component.scss
@@ -1,13 +1,13 @@
 .mat-toolbar {
   background: #000000;
   color: #1eff00;
-  margin-bottom: 0.5%;
 }
 
 .header {
   background: #1eff00;
   display: flex;
-  padding: 1% 0 0 10%;
+  padding-top: 20px;
+  padding-left: 20px;
 }
 
 .tituloH {
