--- a/src/app/tela-inicial/tela-inicial.component.html
+++ b/src/app/tela-inicial/tela-inicial.component.html
@@ -17,7 +17,7 @@
 </mat-toolbar>
 <div class="box-container">
   <div class="tryNow">
-    <h1>SOBRE NÓS</h1>
+    <h1>&nbsp;&nbsp;SOBRE NÓS</h1>
     <p>
       Seja bem-vindo ao <strong>HEIMDALL</strong>, o portal dedicado à gestão e
       reserva de salas para a nossa comunidade acadêmica. Inspirado pelo
