--- a/src/app/tela-inicial/tela-inicial.component.scss
+++ b/src/app/tela-inicial/tela-inicial.component.scss
@@ -46,6 +46,7 @@ li {
   margin: 1.2em auto;
   color: black;
   font-family: Georgia, "Times New Roman", Times, serif;
+  text-align: justify;
 }
 
 .tryButton {
