--- a/src/app/role-adm/tela-home-adm/tela-home-adm.component.scss
+++ b/src/app/role-adm/tela-home-adm/tela-home-adm.component.scss
@@ -4,10 +4,12 @@
 }
 
 .header {
-  background: #1eff00;
+  background: black;
   display: flex;
   padding-top: 20px;
   padding-left: 20px;
+  color: #1ddd04;
+  border-radius: 10px;
 }
 
 .tituloH {
@@ -21,7 +23,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-left: 2%;
 }
 
 .cards {
@@ -32,13 +33,14 @@
 }
 
 mat-card {
-  width: 30%;
-  margin-right: 2%;
   background: white;
   color: black;
   border: solid 2px black;
+  border-radius: 10px;
   mat-card-header {
     background-color: #83cf79;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
   }
   button {
     background: #1ddd04;
@@ -78,7 +80,7 @@ mat-card-title {
 }
 
 .card-width {
-  width: 25vw;
+  width: 100%;
   height: 150px;
 }
 .example-header-image {
@@ -94,41 +96,6 @@ mat-card-title {
   display: flex;
 }
 
-@media (max-width: 768px) {
-  .header {
-    padding: 5% 2%;
-    text-align: center;
-  }
-
-  .tituloH {
-    font-size: 1.5em;
-  }
-
-  .container {
-    flex-direction: column;
-    padding-left: 0;
-  }
-
-  .cards {
-    flex-direction: column;
-    padding: 5% 0;
-  }
-
-  mat-card {
-    width: 90%;
-    margin: 2% auto;
-  }
-
-  .card-width {
-    width: 90%;
-    height: auto;
-  }
-
-  mat-card-header {
-    height: auto;
-  }
-}
-
 .spacer {
   flex: 1 1 auto;
 }
@@ -141,4 +108,22 @@ mat-card-title {
   position: relative;
   width: 30px;
   margin-right: 10px;
+}
+.blocos-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.content {
+  flex: 1 1 calc(33.33% - 20px);
+  box-sizing: border-box;
+  min-width: 300px;
+}
+
+.bloco {
+  background-color: #dcdee2;
+  padding: 15px;
+  border-radius: 10px;
+  margin: 10px;
 }
