--- a/src/styles.scss
+++ b/src/styles.scss
@@ -42,7 +42,7 @@ body {
 }
 body {
   margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
+  font-family: Georgia, "Times New Roman", Times, serif;
   background-color: #f7f7f7;
 }
 
