--- a/src/app/role-adm/tela-home-adm/tela-home-adm.component.scss
+++ b/src/app/role-adm/tela-home-adm/tela-home-adm.component.scss
@@ -121,6 +121,7 @@ mat-card-title {
   flex: 1 1 calc(33.33% - 20px);
   box-sizing: border-box;
   min-width: 300px;
+  max-width: 50%;
 }
 
 .bloco {
