--- a/src/app/role-student/tela-home-student/tela-home-student.component.scss
+++ b/src/app/role-student/tela-home-student/tela-home-student.component.scss
@@ -1,26 +1,30 @@
 .mat-toolbar {
-  background: black;
-  color: #1ddd04;
-  border-bottom: 2px solid black;
+  background: #000000;
+  color: #1eff00;
 }
-//#369835
+
 .header {
-  background: #1ddd04;
+  background: black;
   display: flex;
-  padding: 1% 0 0 10%;
+  padding-top: 20px;
+  padding-left: 20px;
+  color: #1ddd04;
+  border-radius: 10px;
+  box-shadow: 0 2px 5px black;
 }
 
 .tituloH {
-  font-family: Copperplate, Copperplate Gothic Light, fantasy;
   font-size: 2em;
+  font-family: Copperplate, Copperplate Gothic Light, fantasy;
+  cursor: pointer;
 }
 
 .container {
   margin: 0 auto;
+  margin-top: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-left: 2%;
 }
 
 .cards {
@@ -31,11 +35,14 @@
 }
 
 mat-card {
-  width: 30%;
-  margin-right: 2%;
   background: white;
+  color: black;
+  border-radius: 10px;
+  box-shadow: 0 2px 5px black;
   mat-card-header {
     background-color: #83cf79;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
   }
   button {
     background: #1ddd04;
@@ -45,11 +52,12 @@ mat-card {
 
 .novoCard {
   background: white;
+  color: black;
 
   mat-card-header {
     background-color: #83cf79;
     mat-card-title {
-      color: white;
+      color: black;
     }
   }
   button {
@@ -74,7 +82,7 @@ mat-card-title {
 }
 
 .card-width {
-  width: 25vw;
+  width: 100%;
   height: 150px;
 }
 .example-header-image {
@@ -90,41 +98,6 @@ mat-card-title {
   display: flex;
 }
 
-@media (max-width: 768px) {
-  .header {
-    padding: 5% 2%;
-    text-align: center;
-  }
-
-  .tituloH {
-    font-size: 1.5em;
-  }
-
-  .container {
-    flex-direction: column;
-    padding-left: 0;
-  }
-
-  .cards {
-    flex-direction: column;
-    padding: 5% 0;
-  }
-
-  mat-card {
-    width: 90%;
-    margin: 2% auto;
-  }
-
-  .card-width {
-    width: 90%;
-    height: auto;
-  }
-
-  mat-card-header {
-    height: auto;
-  }
-}
-
 .spacer {
   flex: 1 1 auto;
 }
@@ -137,4 +110,23 @@ mat-card-title {
   position: relative;
   width: 30px;
   margin-right: 10px;
+}
+.blocos-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.content {
+  flex: 1 1 calc(33.33% - 20px);
+  box-sizing: border-box;
+  min-width: 300px;
+  max-width: 50%;
+}
+
+.bloco {
+  background-color: #dcdee2;
+  padding: 15px;
+  border-radius: 10px;
+  margin: 10px;
 }
