--- a/src/app/role-teacher/tela-home-teacher/tela-home-teacher.component.html
+++ b/src/app/role-teacher/tela-home-teacher/tela-home-teacher.component.html
@@ -27,6 +27,7 @@
   <div class="content">
     <div class="bloco">
       <div class="header">
+        <mat-icon>flash_on</mat-icon>
         <h2>Acesso Rápido</h2>
       </div>
       <div class="container">
