--- a/src/app/tela-perfil/tela-perfil.component.html
+++ b/src/app/tela-perfil/tela-perfil.component.html
@@ -4,13 +4,13 @@
       <mat-form-field class="nome" appearance="fill">
         <mat-label>Nome:</mat-label>
         <input formControlName="name" [value]="nome" matInput />
-        <mat-icon matSuffix>account_circle</mat-icon>
-      </mat-form-field>
+        <mat-icon matSuffix>account_circle</mat-icon> </mat-form-field
+      ><br />
       <mat-form-field class="nome" appearance="fill">
         <mat-label>Identificação:</mat-label>
         <input [value]="role" matInput [disabled]="true" />
-        <mat-icon matSuffix>remember_me</mat-icon>
-      </mat-form-field>
+        <mat-icon matSuffix>remember_me</mat-icon> </mat-form-field
+      ><br />
       <mat-form-field class="nome" appearance="fill">
         <mat-label>Email:</mat-label>
         <input formControlName="email" type="email" [value]="email" matInput />
