--- a/src/app/tela-reservas/tela-reservas.component.html
+++ b/src/app/tela-reservas/tela-reservas.component.html
@@ -1,9 +1,13 @@
 <div class="button-container">
   <div class="reservas-button">
-    <h1 style="color: #1ddd04;margin: 0.5cm;">Escolha alguma das opções abaixo:</h1>
-    <button mat-raised-button (click)="addData()" class="demo-button">FAZER NOVAS RESERVAS</button>
-    <br>
-    <button mat-raised-button (click)="seeData()" class="demo-button">VER RESERVAS</button>
+    <h1>Escolha alguma das opções abaixo:</h1>
+    <button mat-raised-button (click)="addData()" class="demo-button">
+      FAZER NOVAS RESERVAS
+    </button>
+    <br />
+    <button mat-raised-button (click)="seeData()" class="demo-button">
+      VER RESERVAS
+    </button>
     <!-- <br>
     <button mat-raised-button (click)="permissionData()" class="demo-button">PERMISSÃO DE RESERVAS</button> -->
   </div>
