--- a/src/app/role-adm/tela-home-adm/tela-home-adm.component.scss
+++ b/src/app/role-adm/tela-home-adm/tela-home-adm.component.scss
@@ -27,8 +27,10 @@
 
 .cards {
   display: flex;
+  flex-direction: column;
   padding: 2% 0%;
   width: 100%;
+  gap: 20px;
 }
 
 mat-card {
@@ -76,14 +78,11 @@ mat-card-title {
 .card-width {
   width: 100%;
   height: 150px;
+  height: auto;
 }
 
 .title-card {
   font-size: 1.2rem;
-}
-
-.add-content {
-  display: flex;
 }
 
 .spacer {
