--- a/src/app/role-adm/tela-home-adm/tela-home-adm.component.scss
+++ b/src/app/role-adm/tela-home-adm/tela-home-adm.component.scss
@@ -39,7 +39,7 @@ mat-card {
   border-radius: 10px;
   box-shadow: 0 2px 5px black;
   mat-card-header {
-    background-color: #83cf79;
+    background-color: #35c861;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
   }
@@ -54,7 +54,7 @@ mat-card {
   color: black;
 
   mat-card-header {
-    background-color: #83cf79;
+    background-color: #35c861;
     mat-card-title {
       color: black;
     }
@@ -66,9 +66,8 @@ mat-card {
 }
 
 mat-card-header {
-  margin-bottom: 2%;
   height: 60%;
-  background: #83cf79;
+  background: #35c861;
 }
 
 mat-card-title {
@@ -78,6 +77,7 @@ mat-card-title {
 .card-width {
   width: 100%;
   height: 150px;
+  gap: 20px;
 }
 
 .title-card {
