--- a/src/app/role-adm/tela-home-adm/tela-home-adm.component.html
+++ b/src/app/role-adm/tela-home-adm/tela-home-adm.component.html
@@ -53,7 +53,10 @@
       </div>
       <div class="container">
         <div class="cards">
-          <mat-card class="novoCard card-adicionar-novo-curso card-width">
+          <mat-card
+            class="novoCard card-adicionar-novo-curso card-width"
+            style="gap: 1cm"
+          >
             <mat-card-header>
               <mat-card-title>{{
                 "Adicione mais " + block.name + "."
